<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.FirstScreenFragment"
        android:background="#1E0000">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/f_firstScreen_cv_logo_ex"
                android:layout_width="600dp"
                android:layout_height="600dp"
                android:layout_marginTop="-300dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_red_black" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/f_firstScreen_cv_logo"
                    android:layout_width="275dp"
                    android:layout_height="275dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="110dp"
                    app:cardCornerRadius="200dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_red_black" />

                    <ImageView
                        android:id="@+id/f_firstScreen_iw_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/shape_red_black"
                        android:padding="30dp"
                        android:paddingStart="40dp"
                        android:paddingBottom="30dp"
                        android:src="@drawable/logo_white"
                        tools:ignore="RtlSymmetry" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/f_firstScreen_tv_titleApp"
                style="@style/titleCicciottello"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeStepGranularity="2sp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/f_firstScreen_cv_logo_ex"
                app:layout_constraintVertical_bias="0.25"
                tools:targetApi="o" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:orientation="vertical"

                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/f_firstScreen_tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/f_firstScreen_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/login"
                    style="@style/CipButton"/>

                <TextView
                    android:id="@+id/f_firstScreen_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/new_user_login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/f_firstScreen_btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/register"
                    style="@style/CipButton" />

                <Button
                    android:id="@+id/f_firstScreen_btn_guest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="@color/primary_color_dark_darker_even_darker"
                    android:text="@string/guest_login"
                    style="@style/CipButton" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </FrameLayout>


</layout>